# pyspng

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  pyspng.rst  python_example.rst  requirements.txt
pyspng/: __init__.py  lib.py  main.cpp
src/: main.cpp
tests/: perftest.py  test.py
