[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyspng"
version = "0.1.4"
description = "Fast libspng-based PNG decoder"
readme = "README.md"
authors = [
  { name = "Janne Hellsten", email = "jjhellst@gmail.com" },
]
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/nurpax/pyspng/"
Documentation = "https://pyspng.readthedocs.io/"
Issues = "https://github.com/nurpax/pyspng/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
